<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/listTitle"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/actionBarColor"
        android:contentDescription="@string/app_name"
        android:gravity="top" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/no_connection"
            android:layout_width="wrap_content"
            android:layout_height="70dp"
            android:text="@string/connectionFailed"
            android:textSize="22sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="14dp"
            android:layout_above="@+id/progress_bar"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:elevation="9dp"
            android:theme="@style/RedAccent"
            android:visibility="invisible"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true" />

        <Button
            android:id="@+id/zConnect"
            android:layout_width="180dp"
            android:layout_height="70dp"
            android:layout_marginBottom="100dp"
            android:text="@string/connect_Button"
            android:textSize="18sp"
            style="@style/AppTheme.RoundedCornerMaterialButton"
            android:textColor="@color/black"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />
    </RelativeLayout>


    <ListView
        android:id="@+id/LV"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/listTitle"
        android:background="@color/backgroundDarker"
        android:visibility="gone"
        />

    <FrameLayout
        android:id="@+id/myAdaptiveBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_above="@+id/LV"/>

    <RelativeLayout
        android:id="@+id/mInterstitialAdBreak"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:text="@string/please_wait"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center" />
        <ProgressBar
            android:id="@+id/waitProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="183dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</RelativeLayout>