<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:ads="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/almostWhite">


    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/myBanner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        ads:adSize="SMART_BANNER"
        android:layout_alignParentTop="true"
        ads:adUnitId="@string/banner_ad"/>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/zScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/myBanner"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <TextView
            android:id="@+id/myText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="130dp"
            android:paddingLeft="5dp"
            android:paddingRight="5dp"
            android:textIsSelectable="true"
            android:paddingTop="20dp"
            android:scrollbars="vertical"
            android:textColorHighlight="@color/highlightColor"
            android:textColor="@color/blackBrown"
            android:textSize="22sp" />

    </androidx.core.widget.NestedScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/butOne"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:src="@android:drawable/ic_menu_share"
        android:text="@string/Share"
        app:backgroundTint="?android:attr/textColorPrimary"
        android:layout_marginBottom="26dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <RelativeLayout
        android:id="@+id/detailInterstitialBreak"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:text="@string/please_wait"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:gravity="center" />
        <ProgressBar
            android:id="@+id/waitProgress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="183dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>


</RelativeLayout>